added many final touches

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <span class="N"></span>
     </div>
 
-    <div>
+    <!-- <div>
     <input type="checkbox" class="toggle">
     <span>Transparency mode</span>
-    </div>
+    </div> -->
   </div>
 
   <div class="container"></div>
